--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dialogflow-fulfillment",
   "description": "Dialogflow Fulfillment Library for Node.js",
   "main": "src/dialogflow-fulfillment.js",
+  "typings": "./index.d.ts",
   "version": "0.6.2",
   "license": "Apache-2.0",
   "author": "Google Inc.",
@@ -24,12 +25,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dialogflow/dialogflow-fulfillment-nodejs.git"
+    "url": "git+https://github.com/kwongkz/dialogflow-fulfillment-nodejs.git"
   },
   "bugs": {
-    "url": "https://github.com/dialogflow/dialogflow-fulfillment-nodejs/issues"
+    "url": "https://github.com/kwongkz/dialogflow-fulfillment-nodejs/issues"
   },
-  "homepage": "https://github.com/dialogflow/dialogflow-fulfillment-nodejs#readme",
+  "homepage": "https://github.com/kwongkz/dialogflow-fulfillment-nodejs#readme",
   "keywords": [
     "dialogflow",
     "api.ai",
